--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -13,7 +13,7 @@
 
 .ant-layout-aside-collapse .ant-layout-logo {
   font-size: 30px;
-  color: #9e9e9e;
+  color: #f5f5f5;
   width: 32px;
   margin: 16px;
   transition: all 0.3s ease;
@@ -47,7 +47,7 @@
   display: inline-block;
 }
 
-.ant-layout-aside .ant-layout-sider > .ant-menu > .ant-menu-submenu  .anticon {
+.ant-layout-aside .ant-layout-sider > .ant-menu > .ant-menu-submenu .anticon {
   transition: font-size 0.3s;
 }
 
@@ -63,7 +63,7 @@
   font-size: 0;
 }
 
-.ant-layout-aside-collapse .ant-layout-sider > .ant-menu > .ant-menu-submenu  .anticon {
+.ant-layout-aside-collapse .ant-layout-sider > .ant-menu > .ant-menu-submenu .anticon {
   font-size: 20px;
   display: inline-block;
 }
@@ -118,6 +118,7 @@
   background: #fff;
   height: 64px;
   border-bottom: 1px solid #e9e9e9;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.08);
 }
 
 .ant-layout-aside .ant-layout-breadcrumb {
